fix: (Cascader) height & overflow effect

--- a/src/components/cascader-view/cascader-view.less
+++ b/src/components/cascader-view/cascader-view.less
@@ -22,10 +22,9 @@
       --border-inner: none;
       --border-bottom: none;
       --border-top: none;
-      overflow-y: auto;
     }
     height: var(--height);
-    padding-top: 4px;
+    overflow-y: auto;
     box-sizing: border-box;
   }
 
